Fixed autofocus for input field on mobile

--- a/src/components/Game/StartScreen.css
+++ b/src/components/Game/StartScreen.css
@@ -18,7 +18,6 @@
   max-width: 100%;
   display: flex;
   flex-direction: column;
-  gap: 30px;
   padding: 30px;
   background-color: var(--color-header);
   border-radius: 12px;
@@ -28,8 +27,7 @@
 @media (max-width: 550px) {
   .start-screen-content {
     width: 100%;
-    
-    padding: 20px;
+    padding: 10px 40px 0;
     border-radius: 0;
     box-shadow: none;
     background-color: var(--color-background);
